[gd_scene load_steps=2 format=2]

[ext_resource path="res://prefabs/ui/main_menu/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 90.0
margin_top = 50.0
margin_right = 390.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox"]
margin_right = 300.0
margin_bottom = 14.0
text = "Space 4X"
align = 1
uppercase = true

[node name="CreateGame" type="HBoxContainer" parent="VBox"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/CreateGame"]
margin_right = 243.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="LabelWorldSize" type="Label" parent="VBox/CreateGame/VBoxContainer"]
margin_right = 243.0
margin_bottom = 14.0
text = "LabelWorldSize"

[node name="SliderWorldSize" type="HSlider" parent="VBox/CreateGame/VBoxContainer"]
margin_top = 18.0
margin_right = 243.0
margin_bottom = 34.0
max_value = 2.0

[node name="LabelSeed" type="Label" parent="VBox/CreateGame/VBoxContainer"]
margin_top = 38.0
margin_right = 243.0
margin_bottom = 52.0
text = "LabelWorldSize"

[node name="SpinBoxSeed" type="SpinBox" parent="VBox/CreateGame/VBoxContainer"]
margin_top = 56.0
margin_right = 243.0
margin_bottom = 80.0

[node name="ButtonCreate" type="Button" parent="VBox/CreateGame"]
margin_left = 247.0
margin_right = 300.0
margin_bottom = 80.0
text = "Create"

[node name="StoredGame" type="HBoxContainer" parent="VBox"]
margin_top = 102.0
margin_right = 300.0
margin_bottom = 122.0

[node name="ButtonLoad" type="Button" parent="VBox/StoredGame"]
margin_right = 208.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Load"

[node name="ButtonDeleteSave" type="Button" parent="VBox/StoredGame"]
margin_left = 212.0
margin_right = 300.0
margin_bottom = 20.0
text = "Delete save"

[node name="ButtonSettings" type="Button" parent="VBox"]
margin_top = 126.0
margin_right = 300.0
margin_bottom = 146.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="VBox"]
margin_top = 150.0
margin_right = 300.0
margin_bottom = 170.0
text = "Exit"
[connection signal="value_changed" from="VBox/CreateGame/VBoxContainer/SliderWorldSize" to="." method="_on_world_size_changed"]
[connection signal="value_changed" from="VBox/CreateGame/VBoxContainer/SpinBoxSeed" to="." method="_on_seed_changed"]
[connection signal="pressed" from="VBox/CreateGame/ButtonCreate" to="." method="_on_create"]
[connection signal="pressed" from="VBox/StoredGame/ButtonLoad" to="." method="_on_load"]
[connection signal="pressed" from="VBox/StoredGame/ButtonDeleteSave" to="." method="_on_delete_save"]
[connection signal="pressed" from="VBox/ButtonSettings" to="." method="_on_settings"]
[connection signal="pressed" from="VBox/ButtonExit" to="." method="_on_exit"]
